--- a/.github/workflows/autoapi.yml
+++ b/.github/workflows/autoapi.yml
@@ -27,7 +27,7 @@ jobs:
     - name: run api #api调用
       env: 
         #github的账号信息
-        GH_TOKEN: ${{ github.token }} 
+        GH_TOKEN: ${{ secrets.GH_TOKEN }} 
         GH_REPO: ${{ github.repository }}
         #以下是微软的账号信息(修改以下，复制增加账号)
         APP_NUM: ${{ secrets.APP_NUM }} 
